[tool.poetry]
name = "trackr"
version = "0.1.0"
description = ""
authors = ["Rittik Basu"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.2.2"
bs4 = "^0.0.1"
func-timeout = "^4.3.5"
lxml = "^4.7.1"
replit = "^3.2.4"
Flask = "^2.0.2"
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
