[tool.poetry]
name = "subtrackr"
version = "0.1.0"
description = ""
authors = ["Rittik Basu"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.2.2"
pandas = "^1.3.5"
replit = "^3.2.4"
bs4 = "^0.0.1"
func-timeout = "^4.3.5"
gspread = "^5.1.1"
lxml = "^4.7.1"
oauth2client = "^4.1.3"
Flask = "^2.0.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
